--- a/EXI/index.html
+++ b/EXI/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script type="module" src="/univasset/scripts/include/index.js"></script>
+        <script defer src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +31,17 @@
 
         <div class="container">
             <section id="main_content">
+                <!-- data-embed-showmedia="false" -->
+                <blockquote class="reddit-embed-bq" style="height:316px" data-embed-theme="dark" data-embed-height="240">
+                    <a href="https://www.reddit.com/r/girlsfrontline/comments/w2n556/weekly_commanders_lounge_july_19_2022/">Weekly Commanders Lounge - July 19, 2022</a><br> by<a href="https://www.reddit.com/user/AutoModerator/">u/AutoModerator</a> in<a href="https://www.reddit.com/r/girlsfrontline/">girlsfrontline</a>
+                </blockquote>
+                <!-- <script async="" src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script> -->
+        
+                <blockquote class="reddit-embed-bq" data-embed-theme="dark" data-embed-height="240">
+                    <a href="https://www.reddit.com/r/girlsfrontline/comments/w2n556/comment/igti9c1/">Comment</a><br> by<a href="https://www.reddit.com/user/AutoModerator/">u/AutoModerator</a> from discussion<a href="https://www.reddit.com/r/girlsfrontline/comments/w2n556/weekly_commanders_lounge_july_19_2022/"><no value=""></no></a><br> in<a href="https://www.reddit.com/r/girlsfrontline/">girlsfrontline</a>
+                </blockquote>
+                <!-- <script async="" src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script> -->
+
             </section>
         </div>
     </body>
