--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 11, 2024</summary>
+                    Added IDs 526, 527.<br>
+                    Updated ID 405.
+                </details>
+                <details>
                     <summary>July 09, 2024</summary>
                     Added IDs 519, 520, 521, 522, 523, 524, 525.<br>
                     Updated IDs 208, 486, 174.
