--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 14, 2024</summary>
+                    Added IDs 528, 529, 530, 531, 532, 533.<br>
+                </details>
+                <details>
                     <summary>July 11, 2024</summary>
                     Added IDs 526, 527.<br>
                     Updated ID 405.
