--- a/GFL/faqs/index.html
+++ b/GFL/faqs/index.html
@@ -12,6 +12,7 @@
         <!-- script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script -->
 
         <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <!-- <script defer src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script> -->
         <script type="module" src="./query.js"></script>
         <script type="module" src="/univasset/scripts/include.js"></script>
 
