--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -11,6 +11,7 @@
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
                 ["Neural Cloud: Clukay Banner Type Calculator", "https://docs.google.com/spreadsheets/d/1w5gOllmzkKbC4nwgN1xpZrT8TXuoG5d0O9OLKCI7GrY"]
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
+                ["Advanced Protocol Intricacies (API)", "https://docs.google.com/document/d/1lEYxYajRahUTa4wkkGzt5lLQHw1O6IQQNLp80Tc7ONc"]
                 ["Comprehensive Spirits Guide (CSG)", "https://docs.google.com/document/d/1hPwNc-I7stGQxEK_BgrxBEc4Y_dmL7jM2K_bB-M2J0E"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ["PNC Search Terminal Lv5 Results", "https://docs.google.com/spreadsheets/d/1rF4aIT7GPS70euG4Zbbeib3pSidiKZVhFgpHWjDVC6I"],
