--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>July 30, 2024</summary>
+                    Added IDs 539.<br>
+                </details>
+                <details>
                     <summary>July 23, 2024</summary>
                     Added IDs 537, 538.<br>
                 </details>
