--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 06, 2024</summary>
+                    Added IDs 540, 541.<br>
+                    Updated IDs 175, 464, 200, 377.
+                </details>
+                <details>
                     <summary>July 30, 2024</summary>
                     Added IDs 539.<br>
                 </details>
