--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 08, 2024</summary>
+                    Added IDs 542, 543.
+                </details>
+                <details>
                     <summary>August 06, 2024</summary>
                     Added IDs 540, 541.<br>
                     Updated IDs 175, 464, 200, 377.
