--- a/PNC/unitskins/index.html
+++ b/PNC/unitskins/index.html
@@ -68,11 +68,11 @@
         <div id="name"></div>
         <div id="cost"></div>
         <ul id="tags"></ul>
-        <select>
+        <!--<select>
             <option value="available">Available</option>
             <option value="wishlist">Wishlist</option>
             <option value="obtained">Obtained</option>
-        </select>
+        </select>-->
         <ul id="note"></ul>
     </dialog>
 </html>
