--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -168,23 +168,11 @@
         <form method="dialog"></form>
     </dialog>
 
-    <!--<dialog id="fairy-skills">
+    <dialog id="spirit-skills">
         <div id="name"></div>
 
-        <div id="help" data-tooltip="Click outside to close the dialog window."></div>
 
-        <div id="algo-field" class="tab-group">
-            <div class="tab-button">
-                <label><input type="radio" name="algorithm" value="Offense" checked/>Offense</label>
-                <label><input type="radio" name="algorithm" value="Stability" />Stability</label>
-                <label><input type="radio" name="algorithm" value="Special" />Special</label>
-            </div>
-
-            <div class="tab-body" id="Offense"></div>
-            <div class="tab-body" id="Stability"></div>
-            <div class="tab-body" id="Special"></div>
-        </div>
-    </dialog>-->
+    </dialog>
     <!-- #endregion -->
 </html>
 
@@ -194,6 +182,16 @@
         <img src="" alt="">
         <span></span>
         <div></div>
+    </button>
+</template>
+
+<template id="algo-equip-template">
+    <button type="submit">
+        <div data-grid="name"></div>
+        <div data-grid="set2"></div>
+        <div data-grid="type"></div>
+        <img src="" alt="" />
+        <div data-grid="set3"></div>        
     </button>
 </template>
 
