--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 13, 2024</summary>
+                    Added ID 544.<br>
+                    Updated ID 16.
+                </details>
+                <details>
                     <summary>August 08, 2024</summary>
                     Added IDs 542, 543.
                 </details>
