--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -161,6 +161,7 @@
                 <dl>
                     <dt>Gamepress</dt>
                     <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>
+                    <dd><a href="https://web.archive.org/web/20240324113332/https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">Archived version</a></dd>
 
                     <dt>GFL Corner</dt>
                     <dd><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></dd>
