--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 15, 2024</summary>
+                    Added IDs 545, 546.<br>
+                    Updated IDs 169, 403.<br>
+                    Removed IDs 168, 507.
+                </details>
+                <details>
                     <summary>August 13, 2024</summary>
                     Added ID 544.<br>
                     Updated ID 16.
