--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -186,7 +186,7 @@
 </template>
 
 <template id="algo-equip-template">
-    <button type="submit">
+    <button type="submit" value="">
         <div data-grid="name"></div>
         <div data-grid="set2"></div>
         <div data-grid="type"></div>
