--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 18, 2024</summary>
+                    Added IDs 168, 547.
+                </details>
+                <details>
                     <summary>August 15, 2024</summary>
                     Added IDs 545, 546.<br>
                     Updated IDs 169, 403.<br>
