--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 22, 2024</summary>
+                    Added IDs 507, 548.<br>
+                    Updated IDs 14, 28.
+                </details>
+                <details>
                     <summary>August 18, 2024</summary>
                     Added IDs 168, 547.
                 </details>
