--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 27, 2024</summary>
+                    Added ID 551.
+                </details>
+                <details>
                     <summary>August 25, 2024</summary>
                     Added IDs 549, 550.<br>
                     Updated ID 307.
