--- a/GFL/skills.html
+++ b/GFL/skills.html
@@ -105,6 +105,9 @@
                     <dt>ST AR-15</dt>
                     <dd>Clones dying count towards the set skill.</dd>  <!-- https://old.reddit.com/r/girlsfrontline/comments/1b6zzvd/weekly_commanders_lounge_march_05_2024/ktvc164/ -->
                     <dd>Viable units: T64 3set, P90 skill</dd>
+
+                    <dt>HK 416</dt>
+                    <dd>Black Cat skin <a href="https://old.reddit.com/r/girlsfrontline/comments/u6ztfo/weekly_commanders_lounge_april_19_2022/i5x5agl/">shot timing differences</a>.</dd>
                 </dl>
             </section>
         </div>
