--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <section id="main_content">
                 <a href="https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2">u/YZsFerrari's GFL-RC verse collection.</a>
 
+                Gamepress GFL have migrated to <a href="https://gfverse.info/">GFVerse</a>.
+
                 <!-- <p>Created and maintained by u/BOOM_all_pass. For comments, suggestions, or violent reactions, ping this user in the respective game's subreddit.</p> -->
             </section>
         </div>
