--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>August 29, 2024</summary>
+                    Added ID 552.
+                </details>
+                <details>
                     <summary>August 27, 2024</summary>
                     Added ID 551.
                 </details>
