--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>September 01, 2024</summary>
+                    Added ID 553, 554, 555.
+                </details>
+                <details>
                     <summary>August 29, 2024</summary>
                     Added ID 552.
                 </details>
