--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>September 03, 2024</summary>
+                    Added IDs 34, 35.<br>
+                    VulnerabilityCheck tag added.
+                </details>
+                <details>
                     <summary>March 20, 2024</summary>
                     Added ID 31, 32, 33.<br>
                     Updated ID 18.<br>
