--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,8 +31,13 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>September 05, 2024</summary>
+                    Added ID 556.<br>
+                    Updated ID 14.
+                </details>
+                <details>
                     <summary>September 01, 2024</summary>
-                    Added ID 553, 554, 555.
+                    Added IDs 553, 554, 555.
                 </details>
                 <details>
                     <summary>August 29, 2024</summary>
