--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -170,8 +170,13 @@
 
     <dialog id="spirit-skills">
         <div id="name"></div>
+        <!-- skill 1 -->
+        <!-- skill 2 -->
+        <!-- skill 3 -->
 
-
+        <!-- image -->
+        <!-- name -->
+        <!-- description -->
     </dialog>
     <!-- #endregion -->
 </html>
