--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -31,6 +31,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>September 10, 2024</summary>
+                    Added IDs 36, 37.<br>
+                    Updated ID 18.<br>
+                    Shop tag added.
+                </details>
+                <details>
                     <summary>September 03, 2024</summary>
                     Added IDs 34, 35.<br>
                     VulnerabilityCheck tag added.
