--- a/PNC/index.html
+++ b/PNC/index.html
@@ -36,6 +36,7 @@
                     <a href="./starter">Starter Guide</a>
                     <a href="./returner">Returner Guide</a>
                     <a href="./unitstats">Unit Stats</a>
+                    <a href="./spiritstats">Spirit Stats</a>
                     <a href="./unitdata">Unit Data</a>
                     <a href="./unitskills">Unit Skills</a>
                     <a href="./googledocs">Guides</a>
