--- a/GFL/changelog/index.html
+++ b/GFL/changelog/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script type="module" src="/univasset/scripts/include/index.js"></script>
+        <script type="module" src="index.js"></script>
         
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,41 +31,6 @@
 
         <div class="container">
             <section id="main_content">
-                <details>
-                    <summary>September 12, 2024</summary>
-                    Added ID 557.
-                </details>
-                <details>
-                    <summary>September 05, 2024</summary>
-                    Added ID 556.<br>
-                    Updated ID 14.
-                </details>
-                <details>
-                    <summary>September 01, 2024</summary>
-                    Added IDs 553, 554, 555.
-                </details>
-                <details>
-                    <summary>August 29, 2024</summary>
-                    Added ID 552.
-                </details>
-                <details>
-                    <summary>August 27, 2024</summary>
-                    Added ID 551.
-                </details>
-                <details>
-                    <summary>August 25, 2024</summary>
-                    Added IDs 549, 550.<br>
-                    Updated ID 307.
-                </details>
-                <details>
-                    <summary>August 22, 2024</summary>
-                    Added IDs 507, 548.<br>
-                    Updated IDs 14, 28.
-                </details>
-                <details>
-                    <summary>August 18, 2024</summary>
-                    Added IDs 168, 547.
-                </details>
             </section>
         </div>
     </body>
