--- a/PNC/spiritstats/index.html
+++ b/PNC/spiritstats/index.html
@@ -32,25 +32,29 @@
         <div class="container">
             <section id="main_content">
                 <div id="spirits"></div>
-                <div id="skill-sets">
-                    <div id="sets">
+                <div id="skill-sets" class="tab-group">
+                    <div id="sets" class="tab-button">
                         <label><input type="radio" name="set" value="1">1</label>
                         <label><input type="radio" name="set" value="2">2</label>
                         <label><input type="radio" name="set" value="3">3</label>
                     </div>
-                    <div id="skills"></div>
+                    <div id="skills">
+                        <div class="tab-body set1"></div>    <!-- skill 1 -->
+                        <div class="tab-body set2"></div>    <!-- skill 2 -->
+                        <div class="tab-body set3"></div>    <!-- skill 3 -->
+                    </div>
                 </div>
 
 
-                <div id="extras" class="tab-group">
-                    <div class="tab-button">
+                <div id="extras" >
+                    <div >
                         <label><input type="radio" name="extra" value="Filter" checked>Filter</label>
                         <label><input type="radio" name="extra" value="Toggle">Stat Toggles</label>
                     </div>
     
                     <!-- slideshow on narrower screens -->
                     <!-- has arma - yes, no, unselected -->        
-                    <div id="Filter" class="tab-body">
+                    <div id="Filter" >
                         <div id="classes">
                             <div>Class</div>
                             <label><input type="checkbox" value="Guard" checked /></label>
