--- a/PNC/spiritstats/index.html
+++ b/PNC/spiritstats/index.html
@@ -50,7 +50,7 @@
 </html>
 
 <!-- Template readable outside of html tag -->
-<template id="spirit-button">
+<template id="spirit-button-template">
     <button type="submit" value="">
         <img src="" alt="" />
         <span></span>   <!-- name -->
