--- a/PNC/spiritstats/index.html
+++ b/PNC/spiritstats/index.html
@@ -51,7 +51,7 @@
 
 <!-- Template readable outside of html tag -->
 <template id="spirit-button-template">
-    <button type="submit" value="">
+    <button class="spirit-button" type="submit" value="">
         <img src="" alt="" />
         <span></span>   <!-- name -->
         <div></div>     <!-- stat bonuses -->
