--- a/PNC/spiritstats/index.html
+++ b/PNC/spiritstats/index.html
@@ -7,6 +7,9 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet" href="/univasset/scripts/templates/dialog.css">
+        <link rel="stylesheet" href="/univasset/scripts/templates/dialogform.css">
         <link rel="stylesheet" href="./index.css">
         
         <!-- Setup theme-color -->
