--- a/EXI/effectslist/index.html
+++ b/EXI/effectslist/index.html
@@ -23,11 +23,11 @@
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
-        <title>Girls' Frontline 2: Exilium | Random Scraps</title>
+        <title>Effects List | Random Scraps</title>
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Exilium related stuff only."></include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Status effects list"></include>
 
         <div class="container">
             <section id="main_content">
