--- a/test.html
+++ b/test.html
@@ -32,3 +32,54 @@
         </div>
     </body>
 </html>
+
+                <!-- data-embed-showmedia="false" -->
+                <blockquote class="reddit-embed-bq" data-embed-theme="dark" data-embed-height="240">
+                    <a href="https://www.reddit.com/r/girlsfrontline/comments/w2n556/weekly_commanders_lounge_july_19_2022/">Weekly Commanders Lounge - July 19, 2022</a><br> by<a href="https://www.reddit.com/user/AutoModerator/">u/AutoModerator</a> in<a href="https://www.reddit.com/r/girlsfrontline/">girlsfrontline</a>
+                </blockquote>
+                <!-- <script async="" src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script> -->
+                <iframe
+                    height="302"
+                    src="https://embed.reddit.com/r/girlsfrontline/comments/w2n556/weekly_commanders_lounge_july_19_2022/?embed=true&amp;ref_source=embed&amp;ref=share&amp;utm_medium=widgets&amp;utm_source=embedv2&amp;utm_term=23&amp;theme=dark&amp;utm_name=post_embed&amp;embed_host_url=https%3A%2F%2Fxxx-yyy-xxx.github.io%2FEXI%2F"
+                    width="640px"
+                    scrolling="no"
+                    allowfullscreen="true"
+                    sandbox="allow-scripts allow-same-origin allow-popups"
+                    allow="clipboard-read; clipboard-write"
+                    style="border: none;max-width: 100%;border-radius: 8px;display: block;margin: 0px auto;">
+                </iframe>
+        
+                <blockquote class="reddit-embed-bq" data-embed-theme="dark" data-embed-height="240">
+                    <a href="https://www.reddit.com/r/girlsfrontline/comments/w2n556/comment/igti9c1/">Comment</a><br> by<a href="https://www.reddit.com/user/AutoModerator/">u/AutoModerator</a> from discussion<a href="https://www.reddit.com/r/girlsfrontline/comments/w2n556/weekly_commanders_lounge_july_19_2022/"><no value=""></no></a><br> in<a href="https://www.reddit.com/r/girlsfrontline/">girlsfrontline</a>
+                </blockquote>
+                <!-- <script async="" src="https://embed.reddit.com/widgets.js" charset="UTF-8"></script> -->
+                <iframe
+                    height="240"
+                    src="https://embed.reddit.com/r/girlsfrontline/comments/w2n556/comment/igti9c1/?embed=true&amp;ref_source=embed&amp;ref=share&amp;utm_medium=widgets&amp;utm_source=embedv2&amp;utm_term=23&amp;theme=dark&amp;showmedia=false&amp;showmore=false&amp;depth=1&amp;utm_name=comment_embed&amp;embed_host_url=https%3A%2F%2Fxxx-yyy-xxx.github.io%2FEXI%2F"
+                    width="640px"
+                    scrolling="no"
+                    allowfullscreen="true"
+                    sandbox="allow-scripts allow-same-origin allow-popups"
+                    allow="clipboard-read; clipboard-write"
+                    style="border: none; max-width: 100%; border-radius: 8px; display: block; margin: 0px auto;">
+                </iframe>
+
+                <blockquote class="reddit-embed-bq" data-embed-theme="dark" data-embed-height="240">
+                    <a href="https://www.reddit.com/r/girlsfrontline/comments/kqtpcv/comment/gifxq8v/">Comment</a><br> by from discussion<a href="https://www.reddit.com/r/girlsfrontline/comments/kqtpcv"><no value=""></no></a><br> in<a href="https://www.reddit.com/r/girlsfrontline/">girlsfrontline</a>
+                </blockquote>
+
+                <blockquote class="reddit-embed-bq" data-embed-theme="dark" data-embed-height="240">
+                    <!-- /weekly_commanders_lounge_january_05_2021/ -->
+                    <a href="https://www.reddit.com/r/girlsfrontline/comments/kqtpcv/comment/gifxq8v/">Reddit comment</a>
+                </blockquote>
+
+                <script>
+                    // https://stackoverflow.com/questions/1452871/how-can-i-access-iframe-elements-with-javascript
+                    for (const FRAME of document.querySelectorAll("iframe")) {
+                        const DOC = FRAME.contentDocument ?? FRAME.contentWindow?.document
+                        console.log(FRAME)
+                        console.log(DOC)
+                        console.log("---")
+                    } 
+                </script>
+
