--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -11,6 +11,7 @@
         <section id="downloads">
             <a href="/GFL" class="btn-gfl"></a>
             <a href="/PNC" class="btn-pnc"></a>
+            <a href="/EXI" class="btn-exi"></a>
         </section>
     </div>
 </header>
