--- a/PNC/spiritstats/index.html
+++ b/PNC/spiritstats/index.html
@@ -34,15 +34,15 @@
 
         <div class="container">
             <section id="main_content">
-                <span id="spirit-a"></span>
-                <div id="skill-sets">
-                    <div id="sets">
+                <div id="set-options">
+                    <span id="spirit-a"></span>
+                    <span id="sets">
                         <label><input type="radio" name="set" value="0">1</label>
                         <label><input type="radio" name="set" value="1">2</label>
                         <label><input type="radio" name="set" value="2">3</label>
-                    </div>
-                    <div id="skills"></div>
+                    </span>
                 </div>
+                <div id="skills"></div>
             </section>
         </div>
     </body>
