--- a/PNC/spiritstats/index.html
+++ b/PNC/spiritstats/index.html
@@ -30,7 +30,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" description="Stats comparison and algo builder"></include>
+        <include src="/univasset/scripts/pageheader/header.html" description="Spirit sets builder"></include>
 
         <div class="container">
             <section id="main_content">
