--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -159,9 +159,11 @@
 
                 <a href="#guide" id="guide"><h1>Any guide thread I should read before starting out?</h1></a>
                 <dl>
-                    <dt>Gamepress</dt>
-                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>
-                    <dd><a href="https://web.archive.org/web/20240324113332/https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">Archived version</a></dd>
+                    <!--<dt>Gamepress</dt>-->
+                    <!--<dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>-->
+                    <!--<dd><a href="https://web.archive.org/web/20240324113332/https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">Archived version</a></dd>-->
+                    <dt>GFVerse</dt>
+                    <dd><a href="https://gfverse.info/gfl1/guides/new-player-progression-and-guides-hub">Guides Hub and New Player Progression</a></dd>
 
                     <dt>GFL Corner</dt>
                     <dd><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></dd>
