--- a/PNC/algostats/index.html
+++ b/PNC/algostats/index.html
@@ -41,6 +41,12 @@
                     <!-- has arma -->
                 </div>
                 <div id="units-list"></div>
+                <div id="unit-panel">
+                    <div id="info-group"></div>
+                    <div id="stats"></div>
+                    <div id="algos"></div>
+                    <div id="skill"></div>
+                </div>
             </section>
         </div>
     </body>
@@ -53,8 +59,9 @@
 </html>
 
 <!-- Template readable outside of html tag -->
-<template id="unit-button-template">
-    <button class="" type="button" value="">
+<template id="unit-radio-template">
+    <label class="">
+        <input type="radio" name="" id="">
         <img src="" alt="">
         <span></span>
     </button>
